busca pelo nome tbm e fix do campo de busca principal z-index

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1120,6 +1120,7 @@ textarea
 
 .menuTop
     left -53px
+    z-index 0
 
 .filtros:hover, .menuTop:hover
     color white
@@ -1151,6 +1152,8 @@ textarea
 
 #mainInput
     font-size 12pt
+    position relative
+    z-index 1
 .autocomplete-suggestions .autocomplete-selected
     background #F0F0F0 
 .autocomplete-suggestions div
